fix(summary): toolbar overlapping word count

--- a/app/styles/components/story-preview.styl
+++ b/app/styles/components/story-preview.styl
@@ -24,9 +24,7 @@
 			white-space nowrap
 	.summary-container
 		flex 0
-		min-width 20em
-		top 1em
-		position sticky
+		min-width 25.5em
 		padding 1rem
 	.content-container
 		.mobiledoc-editor__editor
